test/compile_errors/err_unnecessary_unsafe_block.w
//! expect-error: unsafe block contains no unsafe operations

fn main:
    unsafe { let x = 1 + 2 }
